Added ability to take password salt and trusted domains from the environment
Also add draft REAME

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "/opt/web-app"
     links:
       - "db"
+    environment:
+      OWNCLOUD_PASSWORD_SALT: "salty"
   app-server:
     build: "."
     command: "nginx"
